# arc-lang-public

./: .gitignore  README.md  priors.json  pyproject.toml
src/: log.py  logging_config.py  main.py  models.py  notify.py  run.py  run_progress.py  submit.py  usage.py  viz.py
src/configs/: agy_configs.py  ant_configs.py  claude_configs.py  fast_configs.py  gemini3pro_configs.py  gpt52_configs.py  gpt5pro_configs.py  gpt_configs.py  models.py  oss_configs.py
src/llms/: agy.py  claude_code.py  clients.py  messages.py  models.py  openai_responses.py  structured.py
tests/: conftest.py  test_challenge_io.py  test_viz.py
tests/integration/: conftest.py  test_llm_smoke.py
